Fixed width on mobile

--- a/material-overrides/assets/stylesheets/home.css
+++ b/material-overrides/assets/stylesheets/home.css
@@ -62,7 +62,7 @@
   text-align: center;
   padding: 0.5rem;
   color: var(--md-default-fg-color);
-  width: 30%;
+  width: 35%;
   max-width: 60vw;
   border: 1.5px solid var(--md-primary-fg-color);
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
